# md

./: CMakeLists.txt  README.md
cmake/: mdConfig.cmake.in
include/core/md/: array.h  compare.h  concept.h  index_iterator.h  iterator.h  multi_index.h  ostream.h  shared.h  shared_data.h  slice.h  span.h  traits.h
src/tools/: md0.cpp  md1.cpp
test/: CMakeLists.txt
test/src/core/md/: test_md_multi_index.cpp  test_md_shared_array.cpp  test_md_shared_data.cpp  test_md_span.cpp
